S2i-Python-Simple/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: s2i-python-simple
  namespace: s2i-python-simple
  labels:
    Build-Name: S2i-Python-Simple
    app: s2i-python-simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s2i-python-simple
      deployment: s2i-python-simple
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: s2i-python-simple
        deployment: s2i-python-simple
    spec:
      containers:
        - name: s2i-python-simple
          image: >-
            image-registry.openshift-image-registry.svc:5000/s2i-python-simple/python-simple:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
